--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -23,7 +23,8 @@
     strong {
       margin-top: 1rem;
 
-      font: 700 2.1rem 'Poppins', sans-serif;
+      font-size: 2.1rem;
+      font-weight: 700;
       line-height: 2.625rem;
     }
 
@@ -60,6 +61,12 @@
       align-self: center;
     }
 
+    h2 {
+      margin: 4rem 0 2rem;
+
+      font-size: 1.5rem;
+    }
+
     form {
       input {
         height: 50px;
@@ -78,6 +85,26 @@
 
       button, input {
         width: 100%;
+      }
+    }
+
+    p {
+      margin-top: 1rem;
+
+      font-size: .875;
+      color: var(--gray-500);
+
+      a {
+        display: block;
+
+        color: var(--pink-50);
+
+        transition: filter .2s;
+
+        &:hover {
+          filter: brightness(.75);
+          text-decoration: underline;
+        }
       }
     }
   }
