--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
   --primary: #835AFD;
   --secondary: #29292E;
   --background: #F8F8F8;
+  --white-50: #E2E2E2;
   --border: #A8A8B3;
   --gray-500: #737380;
   --red-200: #EA4335;
