styled admin room page

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -18,6 +18,13 @@
     margin-right: 1rem;
   }
 
+  &.outlined {
+    border: 1px solid var(--primary);
+    
+    background: #FFF;
+    color: var(--primary);
+  }
+
   transition: filter .2s;
 
   &:not(:disabled):hover {
