--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -15,6 +15,17 @@
       > img {
         max-width: 80px;
       }
+
+      > div {
+        display: flex;
+        align-items: center;
+
+        gap: 1rem;
+        
+        button {
+          height: 40px;
+        }
+      }
     }
   }
 
