--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,9 @@
   --secondary: #29292E;
   --background: #F8F8F8;
   --white: #FEFEFE;
+  --white-10: #F4F0FF;
   --white-50: #E2E2E2;
+  --white-100: #DBDCDD;
   --border: #A8A8B3;
   --gray-500: #737380;
   --red-200: #EA4335;
